--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_sv_SE.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_sv_SE.properties
@@ -1,58 +1,58 @@
-ForumUIActivity.label.add-post={0} has added a new post: {1}
-ForumUIActivity.label.update-post={0} has updated a post: {1}
-ForumUIActivity.label.add-topic={0} has posted a new topic: {1}
-ForumUIActivity.label.update-topic={0} has updated a topic: {1}
-ForumUIActivity.label.reply=Reply
-ForumUIActivity.label.lastReply=View latest reply
-ForumUIActivity.label.submit=Submit
-ForumUIActivity.label.view=View
-ForumUIActivity.msg.reply-success=you have replied to the post: {0}
-ForumUIActivity.msg.reply-empty=Title or message is empty.
-ForumUIActivity.forum.update-topic-title=Title has been updated to: {0}
-ForumUIActivity.forum.update-topic-content=Content has been edited.
-ForumUIActivity.forum.update-topic-rate=Rated the topic: {0}
-ForumUIActivity.forum.closed-topic=Topic has been closed.
-ForumUIActivity.forum.opened-topic=Topic has been opened.
-ForumUIActivity.forum.locked-topic=Topic has been locked.
-ForumUIActivity.forum.unlocked-topic=Topic has been unlocked.
-ForumUIActivity.forum.approved-topic=Topic has been approved.
-ForumUIActivity.forum.unapproved-topic=Topic has been unapproved.
-ForumUIActivity.forum.move-topic=Topic have been moved to: {0}>{1}
-ForumUIActivity.forum.update-post=Edited his reply to: {0}
-ForumUIActivity.forum.add-poll=A poll has been added to the topic.
-ForumUIActivity.forum.update-poll=Poll has been updated.
-ForumUIActivity.forum.close-poll=Poll has been closed.
-ForumUIActivity.forum.remove-poll=Poll has been removed.
+ForumUIActivity.label.add-post={0} har lagt till en ny post: {1}
+ForumUIActivity.label.update-post={0} har uppdaterat en post: {1}
+ForumUIActivity.label.add-topic={0} har postat en ny tr\u00E5d: {1}
+ForumUIActivity.label.update-topic={0} har uppdaterat ett \u00E4mne: {1}
+ForumUIActivity.label.reply=Svara
+ForumUIActivity.label.lastReply=Visa senaste svar
+ForumUIActivity.label.submit=Skicka
+ForumUIActivity.label.view=Visa
+ForumUIActivity.msg.reply-success=du har svarat p\u00E5 inl\u00E4gg: {0}
+ForumUIActivity.msg.reply-empty=Rubrik eller meddelande \u00E4r tomt.
+ForumUIActivity.forum.update-topic-title=Titeln har uppdaterats till: {0}
+ForumUIActivity.forum.update-topic-content=Inneh\u00E5llet har redigerats.
+ForumUIActivity.forum.update-topic-rate=Betygs\u00E4tt \u00E4mnet: {0}
+ForumUIActivity.forum.closed-topic=\u00C4mnet har st\u00E4ngts.
+ForumUIActivity.forum.opened-topic=\u00C4mnet har \u00F6ppnats.
+ForumUIActivity.forum.locked-topic=\u00C4mnet har l\u00E5sts.
+ForumUIActivity.forum.unlocked-topic=\u00C4mnet \u00E4r nu ol\u00E5st.
+ForumUIActivity.forum.approved-topic=\u00C4mnet har godk\u00E4nts.
+ForumUIActivity.forum.unapproved-topic=\u00C4mnet \u00E4r ej godk\u00E4nt.
+ForumUIActivity.forum.move-topic=\u00C4mnet har flyttats till: {0} > {1}
+ForumUIActivity.forum.update-post=Redigerad svaret till: {0}
+ForumUIActivity.forum.add-poll=En enk\u00E4t har lagts till \u00E4mnet.
+ForumUIActivity.forum.update-poll=Enk\u00E4t har uppdaterats.
+ForumUIActivity.forum.close-poll=Unders\u00F6kningen har avslutats.
+ForumUIActivity.forum.remove-poll=Enk\u00E4t har tagits bort.
 
-AnswerUIActivity.label.answer-add=Answer has been submitted: {0}
-AnswerUIActivity.label.answer-update-content=Answer has been edited to: {0}
-AnswerUIActivity.label.answer-promoted=Comment {0} has been promoted as an answer
-AnswerUIActivity.label.answer-activated=Answer has been activated: {0}
-AnswerUIActivity.label.answer-unactivated=Answer has been unactivated: {0}
-AnswerUIActivity.label.answer-approved=Answer has been approved: {0}
-AnswerUIActivity.label.answer-disapproved=Answer has been unapproved: {0}
-AnswerUIActivity.label.question-update-title=Title has been updated to: {0}
-AnswerUIActivity.label.question-update-detail=Detail has been updated to: {0}
-AnswerUIActivity.label.question-activated=Question has been activated.
-AnswerUIActivity.label.question-unactivated=Question has been unactivated.
-AnswerUIActivity.label.question-add-language=Question has been added in: {0}
-AnswerUIActivity.label.question-add-attachment=Attachment(s) has been added.
-AnswerUIActivity.label.button.view=View
-AnswerUIActivity.label.noComment=No Comment
-AnswerUIActivity.label.comment={0} Comment
-AnswerUIActivity.label.comments={0} Comments
-AnswerUIActivity.label.noAnswer=No Answer
-AnswerUIActivity.label.answer={0} Answer
-AnswerUIActivity.label.answers={0} Answers
-AnswerUIActivity.label.button.answer=Answer
+AnswerUIActivity.label.answer-add=Svaret har skickats: {0}
+AnswerUIActivity.label.answer-update-content=Svaret har redigerats till: {0}
+AnswerUIActivity.label.answer-promoted=Kommentar {0} har blivit befordrad som svar
+AnswerUIActivity.label.answer-activated=Svaret har aktiverats: {0}
+AnswerUIActivity.label.answer-unactivated=Svaret har avaktiverats: {0}
+AnswerUIActivity.label.answer-approved=Svaret har godk\u00E4nts: {0}
+AnswerUIActivity.label.answer-disapproved=Svaret \u00E4r ej godk\u00E4nt: {0}
+AnswerUIActivity.label.question-update-title=Titeln har uppdaterats till: {0}
+AnswerUIActivity.label.question-update-detail=Detalj har uppdaterats till: {0}
+AnswerUIActivity.label.question-activated=Fr\u00E5gan har aktiverats.
+AnswerUIActivity.label.question-unactivated=Fr\u00E5gan \u00E4r inaktiverad.
+AnswerUIActivity.label.question-add-language=Fr\u00E5gan har lagts till i: {0}
+AnswerUIActivity.label.question-add-attachment=Bifogade filer har lagts till.
+AnswerUIActivity.label.button.view=Visa
+AnswerUIActivity.label.noComment=Inga kommentarer
+AnswerUIActivity.label.comment={0} Kommentar
+AnswerUIActivity.label.comments={0} Kommentarer
+AnswerUIActivity.label.noAnswer=Inget svar
+AnswerUIActivity.label.answer={0} Svar
+AnswerUIActivity.label.answers={0} Svar
+AnswerUIActivity.label.button.answer=Svar
 
-PollUIActivity.label.update_poll=Poll has been updated.
-PollUIActivity.label.vote={0} vote
-PollUIActivity.label.votes={0} votes
+PollUIActivity.label.update_poll=Enk\u00E4t har uppdaterats.
+PollUIActivity.label.vote={0} omr\u00F6stning
+PollUIActivity.label.votes={0} r\u00F6ster
 
-ActivityRating.title.rank5=Good
-ActivityRating.title.rank4=Above average
-ActivityRating.title.rank3=Average
-ActivityRating.title.rank2=Below average
-ActivityRating.title.rank1=Poor
-ActivityRating.title.NotRateYet=no value yet
+ActivityRating.title.rank5=Bra
+ActivityRating.title.rank4=\u00D6ver genomsnittet
+ActivityRating.title.rank3=Genomsnittlig
+ActivityRating.title.rank2=Under genomsnittet
+ActivityRating.title.rank1=D\u00E5lig
+ActivityRating.title.NotRateYet=inget v\u00E4rde \u00E4nnu
