--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_sv_SE.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_sv_SE.properties
@@ -1,65 +1,65 @@
-CalendarUIActivity.msg.event-add={0} added an event: {1}
-CalendarUIActivity.msg.event-update={0} has just updated the event: {1}
-CalendarUIActivity.msg.task-add={0} added a task: {1}
-CalendarUIActivity.msg.task-update={0} has just updated the task: {1}
-CalendarUIActivity.msg.event.label.description=Description: 
-CalendarUIActivity.msg.event.label.location=Location: 
-CalendarUIActivity.msg.event.label.start-time=Start Time:
-CalendarUIActivity.msg.event.label.end-time=End Time:
-CalendarUIActivity.msg.event-not-found=The data is not available at the moment.
-ContactUIActivity.msg.contact-add=A new contact has been added: {0}
-ContactUIActivity.msg.contact-update=The following contact has been updated: {0}
-ContactUIActivity.label.email=Email:
-ContactUIActivity.label.job-title=Job Title:
-ContactUIActivity.label.Phone=Cell Phone: 
-CalendarUIActivity.label.more-info=More Info
-CalendarUIActivity.label.accept-invite=Accept
-CalendarUIActivity.label.refuse-invite=Refuse
-CalendarUIActivity.label.assign-to-me=Assign to Me
-CalendarUIActivity.label.need-action=Needs Action
-CalendarUIActivity.label.in-progress=In Progress
-CalendarUIActivity.label.complete=Complete
-CalendarUIActivity.label.cancel=Cancel
-CalendarUIActivity.label.allday=(all day)
-CalendarUIActivity.label.due-for=Due for
+CalendarUIActivity.msg.event-add={0}har lagt till en h\u00E4ndelse: {1}
+CalendarUIActivity.msg.event-update={0} har precis uppdaterat h\u00E4ndelsen: {1}
+CalendarUIActivity.msg.task-add={0} har lagt till en aktivitet: {1}
+CalendarUIActivity.msg.task-update={0} har precis uppdaterat uppgiften: {1}
+CalendarUIActivity.msg.event.label.description=Beskrivning: 
+CalendarUIActivity.msg.event.label.location=Plats: 
+CalendarUIActivity.msg.event.label.start-time=Starttid:
+CalendarUIActivity.msg.event.label.end-time=Sluttid:
+CalendarUIActivity.msg.event-not-found=Informationen \u00E4r inte tillg\u00E4nglig f\u00F6r tillf\u00E4llet.
+ContactUIActivity.msg.contact-add=En ny kontakt har lagts till: {0}
+ContactUIActivity.msg.contact-update=F\u00F6ljande kontakten har uppdaterats: {0}
+ContactUIActivity.label.email=E-post:
+ContactUIActivity.label.job-title=Jobbtitel:
+ContactUIActivity.label.Phone=Mobiltelefon: 
+CalendarUIActivity.label.more-info=Mer information
+CalendarUIActivity.label.accept-invite=Godk\u00E4nn
+CalendarUIActivity.label.refuse-invite=Avsl\u00E5
+CalendarUIActivity.label.assign-to-me=Tilldela till mig
+CalendarUIActivity.label.need-action=Kr\u00E4ver \u00E5tg\u00E4rder
+CalendarUIActivity.label.in-progress=P\u00E5g\u00E5ende
+CalendarUIActivity.label.complete=\u00C5tg\u00E4rdad
+CalendarUIActivity.label.cancel=Avbryt
+CalendarUIActivity.label.allday=(hela dagen)
+CalendarUIActivity.label.due-for=Beh\u00F6rig f\u00F6r
 
-CalendarUIActivity.msg.summary_updated=Summary has been updated to: {0}.
-CalendarUIActivity.msg.description_updated=Description has been updated to: {0}.
-CalendarUIActivity.msg.description_removed=Description has been removed.
-CalendarUIActivity.msg.location_updated=Location has been updated to: {0}.
-CalendarUIActivity.msg.location_removed=Location has been removed.
-CalendarUIActivity.msg.priority_updated=Priority is now: {0}.
-CalendarUIActivity.msg.attachment_updated=Attachment(s) has been added to the event.
-CalendarUIActivity.msg.allDay_updated=Event is now an all-day event.
-CalendarUIActivity.msg.fromDateTime_updated=Start date has been updated to: {0}.
-CalendarUIActivity.msg.toDateTime_updated=End date has been updated to: {0}. 
-CalendarUIActivity.msg.repeatType_updated=Event will be repeated {0}.
-CalendarUIActivity.msg.name_updated=Name has been updated to: {0}.
-CalendarUIActivity.msg.note_updated=Note has been updated to: {0}.
-CalendarUIActivity.msg.note_removed=Note has been removed.
-CalendarUIActivity.msg.task_attachment_updated=Attachment(s) has been added to the task.
-CalendarUIActivity.msg.needs-action=Task needs action.
-CalendarUIActivity.msg.in-process=Task is in progress.
-CalendarUIActivity.msg.completed=Task has been completed.
-CalendarUIActivity.msg.canceled=Task has been canceled.
-CalendarUIActivity.msg.repeatEvent_instance_removed=Event canceled on {0}.
+CalendarUIActivity.msg.summary_updated=Sammanfattning har uppdaterats till: {0}.
+CalendarUIActivity.msg.description_updated=Beskrivning har uppdaterats till: {0}.
+CalendarUIActivity.msg.description_removed=Beskrivning har tagits bort.
+CalendarUIActivity.msg.location_updated=Platsen har uppdaterats till: {0}.
+CalendarUIActivity.msg.location_removed=Platsen har tagits bort.
+CalendarUIActivity.msg.priority_updated=Prioriteringen \u00E4r nu: {0}.
+CalendarUIActivity.msg.attachment_updated=Bifogade filer har lagts till h\u00E4ndelsen.
+CalendarUIActivity.msg.allDay_updated=\u00C4r nu en heldagsaktivitet.
+CalendarUIActivity.msg.fromDateTime_updated=Startdatum har uppdaterats till: {0}.
+CalendarUIActivity.msg.toDateTime_updated=Slutdatum har uppdaterats till: {0}. 
+CalendarUIActivity.msg.repeatType_updated=Evenemanget kommer att upprepas {0}.
+CalendarUIActivity.msg.name_updated=Namn har uppdaterats till: {0}.
+CalendarUIActivity.msg.note_updated=Noten har uppdaterats till: {0}.
+CalendarUIActivity.msg.note_removed=Noten har tagits bort.
+CalendarUIActivity.msg.task_attachment_updated=Bifogade filer har lagts till uppgiften.
+CalendarUIActivity.msg.needs-action=Uppgift kr\u00E4ver \u00E5tg\u00E4rder.
+CalendarUIActivity.msg.in-process=Aktiviteten \u00E4r p\u00E5g\u00E5ende.
+CalendarUIActivity.msg.completed=Uppgiften har slutf\u00F6rts.
+CalendarUIActivity.msg.canceled=Uppgiften har tagits bort.
+CalendarUIActivity.msg.repeatEvent_instance_removed=H\u00E4ndelsen avbryts p\u00E5 {0}.
 
-CalendarUIActivity.msg.daily=every day
-CalendarUIActivity.msg.every-day=every {interval} days
-CalendarUIActivity.msg.weekly=every week on {byDays}
-CalendarUIActivity.msg.every-week=every {interval} weeks on {byDays}
-CalendarUIActivity.msg.monthly=every month on
-CalendarUIActivity.msg.every-month=every {interval} months
+CalendarUIActivity.msg.daily=Varje dag
+CalendarUIActivity.msg.every-day=Varje {interval} dagar
+CalendarUIActivity.msg.weekly=varje vecka p\u00E5 {byDays}
+CalendarUIActivity.msg.every-week=Varje {interval} veckor p\u00E5 {byDays}
+CalendarUIActivity.msg.monthly=varje m\u00E5nad
+CalendarUIActivity.msg.every-month=Varje {interval} m\u00E5nad
 CalendarUIActivity.msg.monthly-by-day={theNumber} {theDay}
-CalendarUIActivity.msg.monthly-by-month-day=day {theDay}
-CalendarUIActivity.msg.yearly=every year from {theDay}
-CalendarUIActivity.msg.every-year=every {interval} years from {theDay}
+CalendarUIActivity.msg.monthly-by-month-day=dag {theDay}
+CalendarUIActivity.msg.yearly=varje \u00E5r fr\u00E5n {theDay}
+CalendarUIActivity.msg.every-year=Varje {interval}\u00E5r fr\u00E5n {theDay}
 
-CalendarUIActivity.msg.count-times={count} times
-CalendarUIActivity.msg.until=until {until}
+CalendarUIActivity.msg.count-times={count} g\u00E5nger
+CalendarUIActivity.msg.until=tills {until}
 
-CalendarUIActivity.msg.summary-the-first=the first
-CalendarUIActivity.msg.summary-the-second=the second
-CalendarUIActivity.msg.summary-the-third=the third
-CalendarUIActivity.msg.summary-the-fourth=the fourth
-CalendarUIActivity.msg.summary-the-last=the last
+CalendarUIActivity.msg.summary-the-first=f\u00F6rsta
+CalendarUIActivity.msg.summary-the-second=andra
+CalendarUIActivity.msg.summary-the-third=tredje
+CalendarUIActivity.msg.summary-the-fourth=fj\u00E4rde
+CalendarUIActivity.msg.summary-the-last=sista
