--- a/integ-search-portlet/src/main/resources/locale/portlet/quicksearch/quicksearch_sv_SE.properties
+++ b/integ-search-portlet/src/main/resources/locale/portlet/quicksearch/quicksearch_sv_SE.properties
@@ -1,12 +1,12 @@
-quicksearch.label=Quick Search Settings
-quicksearch.resultsPerType.label=Results per Type:
-quicksearch.searchIn.label=Search In:
-quicksearch.everything.label=All
-quicksearch.currentsite.label=Search in current site only:
-quicksearch.saveSettings.label=Save Settings
-quicksearch.seeAll.label=See All Search Results
-quicksearch.noResults.label=No result for
-quicksearch.input.label=Search:
-quicksearch.alert.saveSetting=Your setting has been saved.
-quicksearch.alert.error.saveSetting=Problem occurred when saving your setting:
-quicksearch.searching.label=searching..
+quicksearch.label=Inst\u00E4llningar f\u00F6r enkel s\u00F6k
+quicksearch.resultsPerType.label=Resultat per typ:
+quicksearch.searchIn.label=S\u00F6k i:
+quicksearch.everything.label=Alla
+quicksearch.currentsite.label=S\u00F6k endast i nuvarande webbplats:
+quicksearch.saveSettings.label=Spara inst\u00E4llningar
+quicksearch.seeAll.label=Se alla s\u00F6kresultat
+quicksearch.noResults.label=Inget resultat f\u00F6r
+quicksearch.input.label=S\u00F6k:
+quicksearch.alert.saveSetting=Inst\u00E4llningarna har sparats.
+quicksearch.alert.error.saveSetting=Problem uppstod n\u00E4r du sparade din inst\u00E4llning:
+quicksearch.searching.label=S\u00F6ker..
