--- a/integ-search-portlet/src/main/resources/locale/portlet/searchadministration/searchadministration_sv_SE.properties
+++ b/integ-search-portlet/src/main/resources/locale/portlet/searchadministration/searchadministration_sv_SE.properties
@@ -1,7 +1,7 @@
-searchadministration.label=Search Administration
-searchadministration.contentType.label=Content Type
-searchadministration.description.label=Description
-searchadministration.action.label=Action
-searchadministration.disable.label=Disable
-searchadministration.alert.save=Search setting has been saved succesfully.
-searchadministration.alert.error.save=Problem occurred when saving your setting:
+searchadministration.label=S\u00F6kadministration
+searchadministration.contentType.label=Inneh\u00E5llstyp
+searchadministration.description.label=Beskrivning
+searchadministration.action.label=\u00C5tg\u00E4rd
+searchadministration.disable.label=Inaktivera
+searchadministration.alert.save=S\u00F6kinst\u00E4llning har sparats.
+searchadministration.alert.error.save=Problem uppstod n\u00E4r du sparade din inst\u00E4llning:
