--- a/integ-search-portlet/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_sv_SE.properties
+++ b/integ-search-portlet/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_sv_SE.properties
@@ -1,20 +1,20 @@
-unifiedsearch.index.label=Search
-unifiedsearch.index.relevancy.label=Relevance
-unifiedsearch.index.date.label=Date
-unifiedsearch.index.title.label=Title
-unifiedsearch.index.sortBy.label=Sort By:
-unifiedsearch.index.filterBy.label=Filter By
-unifiedsearch.index.allsites.label=All Sites
-unifiedsearch.index.contentTypes.label=All Content Types
-unifiedsearch.index.showmore.label=Show More Results
-unifiedsearch.edit.label=Search Settings
-unifiedsearch.edit.resultsPerPage.label=Results per page:
-unifiedsearch.edit.searchIn.label=Search In:
-unifiedsearch.edit.everything.label=Everything
-unifiedsearch.edit.currentsite.label=Search in current site only:
-unifiedsearch.edit.hideSearchForm.label=Hide search form:
-unifiedsearch.edit.hideFacetsFilter.label=Hide facets filter:
-unifiedsearch.edit.saveSettings.label=Save Settings
-unifiedsearch.edit.alert.saveSettings=Your settings have been saved.
-unifiedsearch.edit.alert.error.saveSettings=Problem occurred when saving your setting:
-unifiedsearch.searching.label=Searching...
+unifiedsearch.index.label=S\u00F6k
+unifiedsearch.index.relevancy.label=Betydelse f\u00F6r
+unifiedsearch.index.date.label=Datum
+unifiedsearch.index.title.label=Titel
+unifiedsearch.index.sortBy.label=Sortera efter:
+unifiedsearch.index.filterBy.label=Filtrera efter
+unifiedsearch.index.allsites.label=Alla platser
+unifiedsearch.index.contentTypes.label=Alla inneh\u00E5llstyper
+unifiedsearch.index.showmore.label=Visa fler resultat
+unifiedsearch.edit.label=S\u00F6kinst\u00E4llningar
+unifiedsearch.edit.resultsPerPage.label=resultat per sida:
+unifiedsearch.edit.searchIn.label=S\u00F6k i:
+unifiedsearch.edit.everything.label=Allt
+unifiedsearch.edit.currentsite.label=S\u00F6k endast i nuvarande webbplats:
+unifiedsearch.edit.hideSearchForm.label=D\u00F6lj s\u00F6kformul\u00E4r:
+unifiedsearch.edit.hideFacetsFilter.label=D\u00F6lja facets filter:
+unifiedsearch.edit.saveSettings.label=Spara inst\u00E4llningar
+unifiedsearch.edit.alert.saveSettings=Inst\u00E4llningarna har sparats.
+unifiedsearch.edit.alert.error.saveSettings=Problem uppstod n\u00E4r du sparade din inst\u00E4llning:
+unifiedsearch.searching.label=S\u00F6ker...
