--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_sv_SE.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_sv_SE.properties
@@ -15,16 +15,16 @@
 # along with this program; if not, see<http://www.gnu.org/licenses/>.
 #
 
-UIActivityComposer.label.UIDocActivityComposer=File
-UIComposerDocumentExtension.label.Select_File=Select File
-UIComposerDocumentExtension.label.Download=Download
-UIComposerDocumentExtension.label.View_File=View
+UIActivityComposer.label.UIDocActivityComposer=Fil
+UIComposerDocumentExtension.label.Select_File=V\u00E4lj fil
+UIComposerDocumentExtension.label.Download=Ladda ner
+UIComposerDocumentExtension.label.View_File=Visa
 UIComposerDocumentExtension.label.Version=Version
-UIPopupWindow.title.UIOneNodePathSelector=File Selector
-UIPopupComposer.title.UIDocActivitySelector=Select File
-UIDocActivitySelector.msg.not-a-file=The file does not exist or an error occurred with the selected file.
-UIComposer.msg.error.Must_select_file=You have to select file first.
-UIDocActivitySelector.label.cancel=Cancel
-UIDocActivitySelector.label.selectedfile=Select
-UIDSUploadInput.label.Upload=Upload
-UIDocActivity.msg.noPermission=You don't have the rights to View/Download this document.
+UIPopupWindow.title.UIOneNodePathSelector=Filv\u00E4ljare
+UIPopupComposer.title.UIDocActivitySelector=V\u00E4lj fil
+UIDocActivitySelector.msg.not-a-file=Filen finns inte eller ett fel uppstod med den markerade filen.
+UIComposer.msg.error.Must_select_file=Du m\u00E5ste f\u00F6rst v\u00E4lja fil.
+UIDocActivitySelector.label.cancel=Avbryt
+UIDocActivitySelector.label.selectedfile=V\u00E4lj
+UIDSUploadInput.label.Upload=Ladda upp
+UIDocActivity.msg.noPermission=Du har inte r\u00E4ttigheter att Visa/ladda ner detta dokument.
