--- a/integ-wiki/integ-wiki-social/src/main/resources/locale/wiki/integration/integration_sv_SE.properties
+++ b/integ-wiki/integ-wiki-social/src/main/resources/locale/wiki/integration/integration_sv_SE.properties
@@ -1,7 +1,7 @@
-WikiUIActivity.label.page-create={0} has created Wiki page: {1}
-WikiUIActivity.label.page-update={0} has edited Wiki page: {1}
-WikiUIActivity.label.view-change=View Changes
+WikiUIActivity.label.page-create={0} har skapat Wiki-sidan: {1}
+WikiUIActivity.label.page-update={0} har redigerat wikisidan: {1}
+WikiUIActivity.label.view-change=Visa \u00E4ndringar
 WikiUIActivity.label.version=Version: 
-WikiUIActivity.msg.update-page-title=Page's title has been updated to: 
-WikiUIActivity.msg.update-page-content=Page's content has been edited.
-WikiUIActivity.msg.move-page=Page has been moved to: 
+WikiUIActivity.msg.update-page-title=Sidans titel har uppdaterats till: 
+WikiUIActivity.msg.update-page-content=Sidans inneh\u00E5ll har redigerats.
+WikiUIActivity.msg.move-page=Sidan har flyttats till: 
