INTEG-180 [integ-ecms-social] Add the new key for other languages

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
@@ -6,6 +6,7 @@
       <editedBy>fue editado por</editedBy>
       <system>el sistema</system>
       <readmore>...Leer más.</readmore>
+      <state>Estado</state>
     </messages>
     <publicationStates>
       <archived>Archivado</archived>
