--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
@@ -6,6 +6,7 @@
       <editedBy>a été édité par</editedBy>
       <system>le système</system>
       <readmore>...Lire la suite.</readmore>
+      <state>Etat</state>
     </messages>
     <publicationStates>
       <archived>Archivé</archived>
