--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_pt_BR.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_pt_BR.xml
@@ -6,6 +6,7 @@
       <editedBy>foi editado por</editedBy>
       <system>o sistema</system>
       <readmore>...Ler mais.</readmore>
+      <state>State</state>
     </messages>
     <publicationStates>
       <archived>Arquivado</archived>
