PLF-5293: Inject Arabic (ar) translation from Crowdin W30

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_ar.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_ar.xml
@@ -5,61 +5,61 @@
       <fileSize>حجم الملف</fileSize>
     </titles>
     <messages>
-      <createdBy>was created by</createdBy>
-      <editedBy>was edited by</editedBy>
-      <system>the system</system>
-      <readmore>...Read More.</readmore>
-      <editTitle>Title has been updated to: {0}</editTitle>
-      <editName>Name has been updated to: {0}</editName>
-      <editDescription>Description has been updated to: {0}</editDescription>
-      <singleCreator>Creator is {0}</singleCreator>
-      <multiCreator>Creators are {0}</multiCreator>
-      <addSource>File source: {0} has been added</addSource>
-      <addMultiSource>File sources: {0} have been added</addMultiSource>
-      <removeSource>File source: {0} has been removed</removeSource>
-      <removeMultiSource>File sources: {0} have been removed</removeMultiSource>
-      <editSummary>Summary has been updated to: {0}</editSummary>
-      <editLanguage>Language has been updated to: {0}</editLanguage>
-      <editContent>Content has been updated.</editContent>
-      <editFile>File has been updated.</editFile>
-      <emptyTitle>The title has been removed.</emptyTitle>
-      <emptySummary>The summary has been removed.</emptySummary>
-      <emptyContent>The content has been removed.</emptyContent>
-      <updateMetadata>Metadata {0} has been updated to: {1}</updateMetadata>
-      <removeMetadata>Metadata {0} has been removed.</removeMetadata>  
-      <removeTitle>Title has been removed.</removeTitle>
-      <removeName>Name has been removed.</removeName>
-      <removeSummary>Summary has been removed.</removeSummary>
-      <removeDescription>Description has been removed.</removeDescription>
-      <removeCreator>Creator: {0} has been removed.</removeCreator>
-      <removeMultiCreator>Creators: {0} have been removed.</removeMultiCreator>
-      <removeLanguage>Language has been removed.</removeLanguage>
-      <removeContent>Content has been removed.</removeContent>
-      <attachmentAdded>File(s) has been attached.</attachmentAdded>
-      <attachmentRemoved>File(s) has been removed.</attachmentRemoved>
-      <categoryAdded>Category: {0} has been added.</categoryAdded>
-      <categoryRemoved>Category: {0} has been removed.</categoryRemoved>
-      <tagAdded>Tag: {0} has been added.</tagAdded>
-      <tagsAdded>Tags: {0} have been added.</tagsAdded>
-      <tagRemoved>Tag: {0} has been removed.</tagRemoved>
-      <tagsRemoved>Tags: {0} have been removed.</tagsRemoved>
+      <createdBy>تم إنشاؤه/ هـا بواسطة</createdBy>
+      <editedBy>تم تغييره بواسطة</editedBy>
+      <system>النظام</system>
+      <readmore>...اقرأ المزيد.</readmore>
+      <editTitle>تمّ تحديث العنوان إلى: {0}</editTitle>
+      <editName>تمّ تحديث الاسم إلى: {0}</editName>
+      <editDescription>تمّ تحديث الوصف إلى: {0}</editDescription>
+      <singleCreator>الذي قام بعملية الانشاء هو {0}</singleCreator>
+      <multiCreator>الذين قاموا بعمليّة الانشاء هم {0}</multiCreator>
+      <addSource>مصدر الملف : {0} تمّ إضافته</addSource>
+      <addMultiSource>مصادر الملف : {0} تمّ إضافتهم</addMultiSource>
+      <removeSource>مصدر الملف : {0} تمّ حذفه</removeSource>
+      <removeMultiSource>مصادر الملف : {0} تمّ حذفهم</removeMultiSource>
+      <editSummary>تمّ تحديث الخلاصة إلى: {0}</editSummary>
+      <editLanguage>تمّ تحديث اللغة إلى: {0}</editLanguage>
+      <editContent>تمّ تحديث المحتوى.</editContent>
+      <editFile>تم تحديث الملف.</editFile>
+      <emptyTitle>تمّ حذف العنوان.</emptyTitle>
+      <emptySummary>تمّ حذف الموجز</emptySummary>
+      <emptyContent>تمّ حذف المحتوى.</emptyContent>
+      <updateMetadata>تم تحديث بيانات التعريف  من {0} الى : {1}</updateMetadata>
+      <removeMetadata>لقد تمّ حذف بيانات التعريف: {0}.</removeMetadata>  
+      <removeTitle>تمّ حذف العنوان.</removeTitle>
+      <removeName>تمّ حذف الاسم.</removeName>
+      <removeSummary>تمّ حذف الملخّص.</removeSummary>
+      <removeDescription>لقد تمّ حذف الوصف.</removeDescription>
+      <removeCreator>تمّ حذف المؤلف: {0}.</removeCreator>
+      <removeMultiCreator>تمّ حذف المؤلفين: {0}.</removeMultiCreator>
+      <removeLanguage>تمّ حذف اللّغة.</removeLanguage>
+      <removeContent>تمّ حذف المحتوى.</removeContent>
+      <attachmentAdded>تمّ إرفاق الملفات.</attachmentAdded>
+      <attachmentRemoved>تمّ إزالة الملف (ـات).</attachmentRemoved>
+      <categoryAdded>وقع إضافة فئة: {0}.</categoryAdded>
+      <categoryRemoved>وقع إزالة فئة: {0}.</categoryRemoved>
+      <tagAdded>وقع إضافة العلامة: {0}.</tagAdded>
+      <tagsAdded>وقع إضافة العلامات: {0}.</tagsAdded>
+      <tagRemoved>وقع إزالة العلامة: {0}.</tagRemoved>
+      <tagsRemoved>وقع إزالة العلامات: {0}.</tagsRemoved>
       <stateChange>
-        <pending>Publication status is now pending.</pending>
-        <approved>Publication has been approved.</approved>
-        <staged>Publication has been staged.</staged>
-        <published>Publication has been published.</published>
+        <pending>وضع المنشور الحالي: قيد النظر.</pending>
+        <approved>تمت الموافقة على المنشور.</approved>
+        <staged>وضع المنشور الحالي: جاهز للنشر.</staged>
+        <published>تم نشر المنشور.</published>
       </stateChange>
-      <contentMoved>Publication has been moved to: {0}</contentMoved>
-      <fileMoved>File has been moved to: {0}</fileMoved>
-      <revisionChanged>Publication has been restored to version: {0}</revisionChanged>
-      <version>Version: {0}</version>
+      <contentMoved>وقد تم نقل المنشور إلى: {0}</contentMoved>
+      <fileMoved>وقد تم نقل الملف إلى: {0}</fileMoved>
+      <revisionChanged>تم استعادة المنشور إلى الاصدار: {0}</revisionChanged>
+      <version>الإصدار: {0}</version>
     </messages>
     <publicationStates>
       <archived>بالأرشيف</archived>
       <obsolete>عفا عليها الزمن</obsolete>
       <unpublished>غير منشورة</unpublished>
       <draft>مسودة</draft>
-      <pending>Pending</pending>
+      <pending>في الانتظار</pending>
       <approved>موافق عليه</approved>
       <inreview>بحالة مُراجعة</inreview>
       <staged>جاهز للنّشر</staged>
@@ -67,7 +67,7 @@
       <live>تم نشره</live>
     </publicationStates>
     <view>رأي</view>
-    <edit>Edit</edit>
+    <edit>تغيير</edit>
     <download>تنزيل هذا الملف</download>
   </SocialIntegration>
   <UIPopupWindow>
