--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_ar.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_ar.properties
@@ -1,54 +1,54 @@
-ForumUIActivity.label.add-post={0} has added a new post: {1}
-ForumUIActivity.label.update-post={0} has updated a post: {1}
-ForumUIActivity.label.add-topic={0} has posted a new topic: {1}
-ForumUIActivity.label.update-topic={0} has updated a topic: {1}
-ForumUIActivity.label.reply=Reply
-ForumUIActivity.label.lastReply=View latest reply
-ForumUIActivity.label.submit=Submit
-ForumUIActivity.label.view=View
-ForumUIActivity.msg.reply-success=you have replied to the post: {0}
-ForumUIActivity.msg.reply-empty=Title or message is empty.
+ForumUIActivity.label.add-post= {0} \u0642\u0627\u0645 \u0628\u0625\u0636\u0627\u0641\u0629 \u0645\u0634\u0627\u0631\u0643\u0629 \u062C\u062F\u064A\u062F\u0629: {1}
+ForumUIActivity.label.update-post={0} \u0642\u0627\u0645 \u0628\u062A\u062D\u062F\u064A\u062B \u0645\u0634\u0627\u0631\u0643\u0629: {1}
+ForumUIActivity.label.add-topic={0} \u0642\u0627\u0645 \u0628\u0646\u0634\u0631 \u0645\u0648\u0636\u0648\u0639 \u062C\u062F\u064A\u062F: {1}
+ForumUIActivity.label.update-topic={0} \u0642\u0627\u0645 \u0628\u062A\u062D\u062F\u064A\u062B \u0645\u0648\u0636\u0648\u0639: {1}
+ForumUIActivity.label.reply=\u0627\u0644\u0631\u062F\u0651
+ForumUIActivity.label.lastReply=\u0639\u0631\u0636 \u0622\u062E\u0631 \u0631\u062F\u0651
+ForumUIActivity.label.submit=\u0623\u0631\u0633\u0644
+ForumUIActivity.label.view=\u0639\u0631\u0636
+ForumUIActivity.msg.reply-success=\u0644\u0642\u062F \u0642\u0645\u062A \u0628\u0627\u0644\u0631\u062F\u0651 \u0639\u0644\u0649 \u0627\u0644\u0645\u0634\u0627\u0631\u0643\u0629: {0}
+ForumUIActivity.msg.reply-empty=\u0627\u0644\u0639\u0646\u0648\u0627\u0646 \u0623\u0648 \u0627\u0644\u0631\u0633\u0627\u0644\u0629 \u0641\u0627\u0631\u063A\u0627\u064B.
 ForumUIActivity.forum.update-topic-title=\u062A\u0645 \u062A\u062D\u062F\u064A\u062B \u0627\u0644\u0639\u0646\u0648\u0627\u0646 \u0625\u0644\u0649: {0}
-ForumUIActivity.forum.update-topic-content=Content has been edited.
-ForumUIActivity.forum.update-topic-rate=Rated the topic: {0}
-ForumUIActivity.forum.closed-topic=Topic has been closed.
-ForumUIActivity.forum.opened-topic=Topic has been opened.
-ForumUIActivity.forum.locked-topic=Topic has been locked.
-ForumUIActivity.forum.unlocked-topic=Topic has been unlocked.
-ForumUIActivity.forum.approved-topic=Topic has been approved.
-ForumUIActivity.forum.unapproved-topic=Topic has been unapproved.
-ForumUIActivity.forum.move-topic=Topic have been moved to: {0}>{1}
-ForumUIActivity.forum.update-post=Edited his reply to: {0}
-ForumUIActivity.forum.add-poll=A poll has been added to the topic.
-ForumUIActivity.forum.update-poll=Poll has been updated.
-ForumUIActivity.forum.close-poll=Poll has been closed.
-ForumUIActivity.forum.remove-poll=Poll has been removed.
+ForumUIActivity.forum.update-topic-content=\u062A\u0645\u0651 \u062A\u063A\u064A\u064A\u0631 \u0627\u0644\u0645\u062D\u062A\u0648\u0649.
+ForumUIActivity.forum.update-topic-rate=\u062A\u0645\u0651 \u062A\u0642\u064A\u064A\u0645 \u0647\u0630\u0627 \u0627\u0644\u0645\u0648\u0636\u0648\u0639: {0}
+ForumUIActivity.forum.closed-topic=\u062A\u0645 \u0625\u063A\u0644\u0627\u0642 \u0627\u0644\u0645\u0648\u0636\u0648\u0639.
+ForumUIActivity.forum.opened-topic=\u062A\u0645 \u0641\u062A\u062D \u0627\u0644\u0645\u0648\u0636\u0648\u0639.
+ForumUIActivity.forum.locked-topic=\u062A\u0645\u0651 \u062A\u0623\u0645\u064A\u0646 \u0627\u0644\u0645\u0648\u0636\u0648\u0639.
+ForumUIActivity.forum.unlocked-topic=\u062A\u0645\u0651 \u0625\u0644\u063A\u0627\u0621 \u062A\u0623\u0645\u064A\u0646 \u0627\u0644\u0645\u0648\u0636\u0648\u0639.
+ForumUIActivity.forum.approved-topic=\u062A\u0645\u0651\u062A \u0627\u0644\u0645\u0648\u0627\u0641\u0642\u0629 \u0639\u0644\u0649 \u0627\u0644\u0645\u0648\u0636\u0648\u0639.
+ForumUIActivity.forum.unapproved-topic=\u062A\u0645\u0651 \u0631\u0641\u0636 \u0627\u0644\u0645\u0648\u0636\u0648\u0639.
+ForumUIActivity.forum.move-topic=\u062A\u0645\u0651 \u0646\u0642\u0644 \u0627\u0644\u0645\u0648\u0636\u0648\u0639 \u0625\u0644\u0649: {0} > {1}
+ForumUIActivity.forum.update-post=\u0642\u0627\u0645 \u0628\u062A\u063A\u064A\u064A\u0631 \u0631\u062F\u0651\u0647 \u0625\u0644\u0649: {0}
+ForumUIActivity.forum.add-poll=\u062A\u0645\u0651 \u0625\u0636\u0627\u0641\u0629 \u0627\u0633\u062A\u0637\u0644\u0627\u0639 \u0631\u0623\u064A \u0644\u0647\u0630\u0627 \u0627\u0644\u0645\u0648\u0636\u0648\u0639.
+ForumUIActivity.forum.update-poll=\u062A\u0645\u0651 \u062A\u062D\u062F\u064A\u062B \u0627\u0633\u062A\u0637\u0644\u0627\u0639 \u0627\u0644\u0631\u0623\u064A.
+ForumUIActivity.forum.close-poll=\u062A\u0645\u0651 \u0625\u063A\u0644\u0627\u0642 \u0627\u0633\u062A\u0637\u0644\u0627\u0639 \u0627\u0644\u0631\u0623\u064A.
+ForumUIActivity.forum.remove-poll=\u062A\u0645\u0651\u062A \u0625\u0632\u0627\u0644\u0629 \u0647\u0630\u0627 \u0627\u0644\u0627\u0633\u062A\u0637\u0644\u0627\u0639.
 
-AnswerUIActivity.label.answer-add=Answer has been submitted: {0}
-AnswerUIActivity.label.answer-update-content=Answer has been edited to: {0}
-AnswerUIActivity.label.answer-promoted=Comment {0} has been promoted as an answer
-AnswerUIActivity.label.answer-activated=Answer has been activated: {0}
-AnswerUIActivity.label.answer-unactivated=Answer has been unactivated: {0}
-AnswerUIActivity.label.answer-approved=Answer has been approved: {0}
-AnswerUIActivity.label.answer-disapproved=Answer has been unapproved: {0}
+AnswerUIActivity.label.answer-add=\u062A\u0645\u0651 \u062A\u0642\u062F\u064A\u0645 \u0625\u062C\u0627\u0628\u0629: {0}
+AnswerUIActivity.label.answer-update-content=\u062A\u0645\u0651 \u062A\u063A\u064A\u064A\u0631 \u0627\u0644\u0625\u062C\u0627\u0628\u0629 \u0627\u0644\u0649: {0}
+AnswerUIActivity.label.answer-promoted=\u062A\u0645\u0651\u062A \u062A\u0631\u0642\u064A\u0629 \u0627\u0644\u062A\u0639\u0644\u064A\u0642 {0} \u0643\u0625\u062C\u0627\u0628\u0629
+AnswerUIActivity.label.answer-activated=\u062A\u0645 \u062A\u0641\u0639\u064A\u0644 \u0627\u0644\u0625\u062C\u0627\u0628\u0629: {0}
+AnswerUIActivity.label.answer-unactivated=\u062A\u0645 \u0625\u0644\u063A\u0627\u0621 \u062A\u0641\u0639\u064A\u0644 \u0627\u0644\u0625\u062C\u0627\u0628\u0629: {0}
+AnswerUIActivity.label.answer-approved=\u062A\u0645\u062A \u0627\u0644\u0645\u0648\u0627\u0641\u0642\u0629 \u0639\u0644\u0649 \u0627\u0644\u0625\u062C\u0627\u0628\u0629: {0}
+AnswerUIActivity.label.answer-disapproved=\u062A\u0645 \u0625\u0644\u063A\u0627\u0621 \u0627\u0644\u0645\u0648\u0627\u0641\u0642\u0629 \u0639\u0644\u0649 \u0627\u0644\u0625\u062C\u0627\u0628\u0629: {0}
 AnswerUIActivity.label.question-update-title=\u062A\u0645 \u062A\u062D\u062F\u064A\u062B \u0627\u0644\u0639\u0646\u0648\u0627\u0646 \u0625\u0644\u0649: {0}
-AnswerUIActivity.label.question-update-detail=Detail has been updated to: {0}
-AnswerUIActivity.label.question-activated=Question has been activated.
-AnswerUIActivity.label.question-unactivated=Question has been unactivated.
-AnswerUIActivity.label.question-add-language=Question has been added in: {0}
-AnswerUIActivity.label.question-add-attachment=Attachment(s) has been added.
-AnswerUIActivity.label.button.view=View
-AnswerUIActivity.label.noComment=No Comment
-AnswerUIActivity.label.comment={0} Comment
-AnswerUIActivity.label.comments={0} Comments
-AnswerUIActivity.label.noAnswer=No Answer
-AnswerUIActivity.label.answer={0} Answer
-AnswerUIActivity.label.answers={0} Answers
+AnswerUIActivity.label.question-update-detail=\u062A\u0645 \u062A\u062D\u062F\u064A\u062B \u0627\u0644\u062A\u0641\u0627\u0635\u064A\u0644 \u0627\u0644\u0649: {0}
+AnswerUIActivity.label.question-activated=\u062A\u0645 \u062A\u0641\u0639\u064A\u0644 \u0627\u0644\u0633\u0624\u0627\u0644.
+AnswerUIActivity.label.question-unactivated=\u062A\u0645 \u0625\u0644\u063A\u0627\u0621 \u062A\u0641\u0639\u064A\u0644 \u0627\u0644\u0633\u0624\u0627\u0644.
+AnswerUIActivity.label.question-add-language=\u062A\u0645\u0651 \u0625\u0636\u0627\u0641\u0629 \u0627\u0644\u0633\u0624\u0627\u0644 \u0641\u064A: {0}
+AnswerUIActivity.label.question-add-attachment=\u062A\u0645\u0651 \u0625\u0636\u0627\u0641\u0629 \u0627\u0644\u0645\u0631\u0641\u0642\u0627\u062A
+AnswerUIActivity.label.button.view=\u0639\u0631\u0636
+AnswerUIActivity.label.noComment=\u0644\u0627 \u064A\u0648\u062C\u062F \u062A\u0639\u0644\u064A\u0642
+AnswerUIActivity.label.comment={0} \u062A\u0639\u0644\u064A\u0642
+AnswerUIActivity.label.comments={0} \u062A\u0639\u0644\u064A\u0642\u0627\u062A
+AnswerUIActivity.label.noAnswer=\u0644\u0627 \u062A\u0648\u062C\u062F \u0625\u062C\u0627\u0628\u0629
+AnswerUIActivity.label.answer={0} \u062C\u0648\u0627\u0628
+AnswerUIActivity.label.answers={0} \u0625\u062C\u0627\u0628\u0627\u062A
 AnswerUIActivity.label.button.answer=\u0625\u062C\u0627\u0628\u0629
 
-PollUIActivity.label.update_poll=Poll has been updated.
-PollUIActivity.label.vote={0} vote
-PollUIActivity.label.votes={0} votes
+PollUIActivity.label.update_poll=\u062A\u0645\u0651 \u062A\u062D\u062F\u064A\u062B \u0627\u0633\u062A\u0637\u0644\u0627\u0639 \u0627\u0644\u0631\u0623\u064A.
+PollUIActivity.label.vote={0} \u062A\u0635\u0648\u064A\u062A
+PollUIActivity.label.votes={0} \u0623\u0635\u0648\u0627\u062A
 
 ActivityRating.title.rank5=\u0645\u0645\u062A\u0627\u0632
 ActivityRating.title.rank4=\u062D\u0633\u0646
