--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_ar.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_ar.properties
@@ -15,16 +15,16 @@
 # along with this program; if not, see<http://www.gnu.org/licenses/>.
 #
 
-UIActivityComposer.label.UIDocActivityComposer=File
-UIComposerDocumentExtension.label.Select_File=Select File
+UIActivityComposer.label.UIDocActivityComposer=\u0645\u0644\u0641\u0651
+UIComposerDocumentExtension.label.Select_File=\u0625\u062E\u062A\u064A\u0627\u0631 \u0645\u0644\u0641\u0651
 UIComposerDocumentExtension.label.Download=\u062A\u0646\u0632\u064A\u0644 \u0647\u0630\u0627 \u0627\u0644\u0645\u0644\u0641
 UIComposerDocumentExtension.label.View_File=\u0631\u0623\u064A
 UIComposerDocumentExtension.label.Version=\u0627\u0635\u062F\u0627\u0631
-UIPopupWindow.title.UIOneNodePathSelector=File Selector
-UIPopupComposer.title.UIDocActivitySelector=Select File
-UIDocActivitySelector.msg.not-a-file=The file does not exist or an error occurred with the selected file.
-UIComposer.msg.error.Must_select_file=You have to select file first.
-UIDocActivitySelector.label.cancel=Cancel
+UIPopupWindow.title.UIOneNodePathSelector=\u0625\u062E\u062A\u064A\u0627\u0631 \u0645\u0644\u0641\u0651
+UIPopupComposer.title.UIDocActivitySelector=\u0625\u062E\u062A\u0631 \u0627\u0644\u0645\u0644\u0641
+UIDocActivitySelector.msg.not-a-file=\u0627\u0644\u0645\u0644\u0641 \u063A\u064A\u0631 \u0645\u0648\u062C\u0648\u062F \u0623\u0648 \u0631\u0628\u0651\u0645\u0627 \u0637\u0631\u0623 \u062E\u0637\u0623 \u0645\u0639 \u0627\u0644\u0645\u0644\u0641 \u0627\u0644\u0645\u062D\u062F\u0651\u062F.
+UIComposer.msg.error.Must_select_file=\u0639\u0644\u064A\u0643 \u062A\u062D\u062F\u064A\u062F \u0627\u0644\u0645\u0644\u0641\u0651 \u0623\u0648\u0651\u0644\u0627\u064B.
+UIDocActivitySelector.label.cancel=\u0625\u0644\u063A\u0627\u0621
 UIDocActivitySelector.label.selectedfile=\u0627\u062E\u062A\u064A\u0627\u0631
 UIDSUploadInput.label.Upload=\u062A\u062D\u0645\u064A\u0644
-UIDocActivity.msg.noPermission=You don't have the rights to View/Download this document.
+UIDocActivity.msg.noPermission=\u0644\u064A\u0633 \u0644\u062F\u064A\u0643 \u0627\u0644\u062D\u0642\u0651 \u0641\u064A \u0639\u0631\u0636/\u062A\u062D\u0645\u064A\u0644 \u0647\u0630\u0647 \u0627\u0644\u0648\u062B\u064A\u0642\u0629.
