PLF-5296: Inject Vietnamese (vi) translation from Crowdin W30

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_vi.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_vi.properties
@@ -15,15 +15,15 @@
 # along with this program; if not, see<http://www.gnu.org/licenses/>.
 #
 
-UIActivityComposer.label.UIDocActivityComposer=T\u1EADp tin
+UIActivityComposer.label.UIDocActivityComposer=T\u1EC7p
 UIComposerDocumentExtension.label.Select_File=Ch\u1ECDn t\u1EADp tin
-UIComposerDocumentExtension.label.Download=T\u1EA3i T\u1EADp tin v\u1EC1
+UIComposerDocumentExtension.label.Download=T\u1EA3i T\u1EC7p v\u1EC1
 UIComposerDocumentExtension.label.View_File=Xem
 UIComposerDocumentExtension.label.Version=Phi\u00EAn b\u1EA3n
-UIPopupWindow.title.UIOneNodePathSelector=Ch\u1ECDn t\u1EADp tin
+UIPopupWindow.title.UIOneNodePathSelector=Ch\u1ECDn T\u1EC7p
 UIPopupComposer.title.UIDocActivitySelector=Ch\u1ECDn t\u1EADp tin
-UIDocActivitySelector.msg.not-a-file=T\u1EADp tin kh\u00F4ng t\u1ED3n t\u1EA1i ho\u1EB7c c\u00F3 m\u1ED9t l\u1ED7i v\u1EDBi t\u1EADp tin \u0111\u00E3 ch\u1ECDn.
-UIComposer.msg.error.Must_select_file=B\u1EA1n ph\u1EA3i ch\u1ECDn t\u1EADp tin tr\u01B0\u1EDBc.
+UIDocActivitySelector.msg.not-a-file=T\u1EC7p kh\u00F4ng t\u1ED3n t\u1EA1i ho\u1EB7c c\u00F3 m\u1ED9t l\u1ED7i v\u1EDBi t\u1EC7p \u0111\u00E3 ch\u1ECDn.
+UIComposer.msg.error.Must_select_file=B\u1EA1n ph\u1EA3i ch\u1ECDn t\u1EC7p tr\u01B0\u1EDBc.
 UIDocActivitySelector.label.cancel=H\u1EE7y b\u1ECF
 UIDocActivitySelector.label.selectedfile=Ch\u1ECDn
 UIDSUploadInput.label.Upload=T\u1EA3i l\u00EAn
