PLF-5298: Inject Spanish (es-ES) translation from Crowdin W30

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
@@ -2,7 +2,7 @@
 <bundle>
   <SocialIntegration>
     <titles>
-      <fileSize>File Size</fileSize>
+      <fileSize>Tamaño del archivo</fileSize>
     </titles>
     <messages>
       <createdBy>was created by</createdBy>
