--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_es_ES.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_es_ES.properties
@@ -55,4 +55,4 @@ ActivityRating.title.rank4=superior a la media/Click para votar
 ActivityRating.title.rank3=promedio/Pulse para votar
 ActivityRating.title.rank2=inferior a la media/Pulse para votar
 ActivityRating.title.rank1=Normal/Pulse para votar
-ActivityRating.title.NotRateYet=no value yet
+ActivityRating.title.NotRateYet=sin embargo ning\u00FAn valor
