--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_es_ES.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_es_ES.properties
@@ -21,10 +21,10 @@ UIComposerDocumentExtension.label.Download=Descargar
 UIComposerDocumentExtension.label.View_File=Ver
 UIComposerDocumentExtension.label.Version=Versi\u00F3n
 UIPopupWindow.title.UIOneNodePathSelector=Selector de archivos
-UIPopupComposer.title.UIDocActivitySelector=Select File
+UIPopupComposer.title.UIDocActivitySelector=Seleccionar archivo
 UIDocActivitySelector.msg.not-a-file=El archivo no existe o se ha producido alg\u00FAn error con el archivo seleccionado.
 UIComposer.msg.error.Must_select_file=Tienes que seleccionar el archivo primero.
 UIDocActivitySelector.label.cancel=Cancelar
 UIDocActivitySelector.label.selectedfile=Seleccionar
 UIDSUploadInput.label.Upload=Subir
-UIDocActivity.msg.noPermission=You don't have the rights to View/Download this document.
+UIDocActivity.msg.noPermission=No tiene los derechos para ver/Descargar este documento.
