--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_en.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_en.properties
@@ -49,6 +49,7 @@ AnswerUIActivity.label.button.answer=Answer
 PollUIActivity.label.update_poll=Poll has been updated.
 PollUIActivity.label.vote={0} vote
 PollUIActivity.label.votes={0} votes
+PollUIActivity.action.vote=Vote
 
 ActivityRating.title.rank5=Good
 ActivityRating.title.rank4=Above average
