CAL-684 Edit repetitive events integration

--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_en.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_en.properties
@@ -43,6 +43,8 @@ CalendarUIActivity.msg.in-process=Task is in progress.
 CalendarUIActivity.msg.completed=Task has been completed.
 CalendarUIActivity.msg.canceled=Task has been canceled.
 CalendarUIActivity.msg.repeatEvent_instance_removed=Event canceled on {0}.
+CalendarUIActivity.msg.stop_repeating=Event will stop repeating on {0}
+CalendarUIActivity.msg.event_cancelled=Event cancelled for {0}
 
 CalendarUIActivity.msg.daily=every day
 CalendarUIActivity.msg.every-day=every {interval} days
