INTEG-216: [integ-forum] i18n for the message of number of replies in Topic Activity
Fix description:
* Define new keys for that message depending on the number value
* Use these keys to get the appropriate localized message

--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_en.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_en.properties
@@ -6,6 +6,9 @@ ForumUIActivity.label.reply=Reply
 ForumUIActivity.label.lastReply=View latest reply
 ForumUIActivity.label.submit=Submit
 ForumUIActivity.label.view=View
+ForumUIActivity.label.noReply=No Reply
+ForumUIActivity.label.oneReply={0} Reply
+ForumUIActivity.label.replies={0} Replies
 ForumUIActivity.msg.reply-success=you have replied to the post: {0}
 ForumUIActivity.msg.reply-empty=Title or message is empty.
 ForumUIActivity.forum.update-topic-title=Title has been updated to: {0}
